update to JDK 25, fix .js loading, add JUnit 5 test suite
- pom.xml: target JDK 25 via maven.compiler.release; add JUnit 5 + surefire
  with --enable-native-access=ALL-UNNAMED argLine; swap json-simple for
  jackson-databind 2.18.2 (supports comments in tsconfig.json)
- JsSource: pick MIME by extension so plain .js loads as a script and
  top-level functions/classes become global bindings (.mjs still loaded
  as a module); remove silent null return + IOException swallow
- ApidechJavaJsRuntime.singleEval: catch all throwables into JsResult,
  drop printStackTrace
- JsResult: add Throwable constructor, getException now returns Throwable
- JsFile.getFunction: null-guard so hasFunction("missing") returns false
  instead of NPE
- JsWorkingSpace: replace isFunctionExists() stub with hasFunction(String)
- JsClass.isInstanceOf: stop building JS via String.format; use cached
  arrow function applied to prototype Values (closes code-injection risk)
- TypeScriptCompiler: read tsconfig.json with Jackson, ALLOW_COMMENTS
  and ALLOW_TRAILING_COMMA enabled
- README: document --enable-native-access=ALL-UNNAMED requirement
- delete old main-method test classes (TestJs, TestTs, TestTsRunnable)
- add JUnit 5 suite (22 tests) covering: .js/.mjs load, top-level function
  invocation + introspection, class methods + chain, inheritance,
  injection rejection, singleEval success/error, tsconfig parse